src/objects/Sales_Adjustment__c.object
<CustomObject>
    <description>Intake form for Sales Adjustment</description>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjustment_Month_Num__c</fullName>
        <formula>CASE( Adjustment_Month__c, 
																				&quot;January&quot;, 1, 
																				&quot;February&quot;, 2, 
																				&quot;March&quot;, 3, 
																				&quot;April&quot;, 4, 
																				&quot;May&quot;, 5, 
																				&quot;June&quot;, 6, 
																				&quot;July&quot;, 7, 
																				&quot;August&quot;, 8, 
																				&quot;September&quot;, 9, 
																				&quot;October&quot;, 10, 
																				&quot;November&quot;, 11, 
																				&quot;December&quot;, 12, 
																				&quot;&quot;, Month(  TODAY() ), 
																				0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Month Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Month__c</fullName>
        <label>Adjustment Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Adjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_of_Adjustment__c</fullName>
        <label>Amount of Adjustment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Amount_of_Adjustment__c</fullName>
        <description>Updated by Approval Process when once approved this field displays the same text as Amount of Adjustment. *This is to keep the rejected amounts hidden from Agent per requirements.</description>
        <label>Approved Amount of Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Adjustment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Numer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Numer</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Sales Adjustment</relationshipLabel>
        <relationshipName>Sales_Adjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submit for Approval</fullName>
                    <default>true</default>
                    <label>Submit for Approval</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Adjustment__c</fullName>
        <label>Type of Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contests</fullName>
                </value>
                <value>
                    <fullName>Pilots</fullName>
                </value>
                <value>
                    <fullName>Training Assistance</fullName>
                </value>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>Training Bonus</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Kickers</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Adjustment</label>
    <listViews>
        <fullName>My_Sales_Adjustment_s</fullName>
        <columns>NAME</columns>
        <columns>Agent__c</columns>
        <columns>Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_of_Adjustment__c</columns>
        <columns>Type_of_Adjustment__c</columns>
        <columns>Additional_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Sales Adjustment(s)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Team_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Adj_Approval_Sales_Adjustment</fullName>
        <columns>NAME</columns>
        <columns>Agent__c</columns>
        <columns>Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_of_Adjustment__c</columns>
        <columns>Type_of_Adjustment__c</columns>
        <columns>Additional_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Adj Approval</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Team_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Adjustment-{0000}</displayFormat>
        <label>Sales Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Adjustment</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Adjustment_Month_Constraint</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IF(ISNEW(),(Month(  TODAY() ) ), Month(DATEVALUE(  CreatedDate ) )) - Adjustment_Month_Num__c &lt;&gt; -11, IF(ISNEW(),(Month(  TODAY() ) ), Month(DATEVALUE(  CreatedDate ) )) - Adjustment_Month_Num__c &lt;&gt; 1, IF(ISNEW(),(Month(  TODAY() ) ), Month(DATEVALUE(  CreatedDate ) )) - Adjustment_Month_Num__c &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Adjustment_Month__c</errorDisplayField>
        <errorMessage>Cannot pick this month, it should be this month or previous month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Nmb_Required_if_not_Technical_Iss</fullName>
        <active>true</active>
        <description>Require Order Number if it is not labeled as a technical issue.</description>
        <errorConditionFormula>ISPICKVAL( Type_of_Adjustment__c , &apos;Technical Issue&apos;) &amp;&amp; (ISBLANK( Order_Numer__c ))</errorConditionFormula>
        <errorMessage>Order Number is required when submitting a Technical Issue.</errorMessage>
    </validationRules>
</CustomObject>